# CompPhysLab

./: .gitignore  00_ScratchPad.ipynb  01_vectors.ipynb  PythonMinimum.ipynb  README.md  pyproject.toml  setup.sh
GettingStarted/: python_minimum_part1.ipynb
comphyslab/: graphics.py  newton.py  vectors.py
computil/: graphics.py  newton.py  vectors.py
exercises/01_vectors/: 01_vectors.ipynb  01_vectors_solutions.ipynb
exercises/02_derivatives/: 01_derivatives.ipynb  02_taylor_series.ipynb
exercises/03_projectiles_3D/: 01_projectiles_3D.ipynb
exercises/04_gravity/: 01_gravity.ipynb  planets-10-22-24.csv  planets-10-23-24.csv
exercises/05_rainbows/: 01_rainbows.ipynb
exercises/06_lenses/: 01_lenses.ipynb
projects/01_projectiles/: project_01_projectiles.ipynb
projects/02_mission2mars/: planets2.csv
projects/03_rainbows/: project_03_rainbows.ipynb
projects/04_lens/: project_04_lens.ipynb
projects/05_ml/: project_05_ml.ipynb
